--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,31 @@
-Package            Version  
------------------- ---------
-astropy            5.0      
-attrs              21.4.0   
-bleach             4.1.0    
-bokeh              2.4.2    
-casatasks          6.4.3.16 
-casatestutils      6.4.3.16 
-casatools          6.4.3.16 
-casaviewer         1.3.1    
-certifi            2021.10.8
-charset-normalizer 2.0.9    
-cycler             0.11.0   
-fonttools          4.28.5   
-grpcio             1.43.0   
-idna               3.3      
-importlib-metadata 4.10.0   
-iniconfig          1.1.1    
-Jinja2             3.0.3    
-kiwisolver         1.3.2    
-Markdown           3.3.6    
-MarkupSafe         2.0.1    
-matplotlib         3.5.1    
-numpy              1.22.0   
-packaging          21.3     
-pandas             1.3.5    
-panel              0.12.6   
-param              1.12.0   
-Pillow             9.0.0    
-pip                19.3.1   
-pluggy             1.0.0    
-protobuf           3.19.1   
-py                 1.11.0   
-pyct               0.4.8    
-pyerfa             2.0.0.1  
-pyparsing          3.0.6    
-pytest             6.2.5    
-python-dateutil    2.8.2    
-pytz               2021.3   
-pyviz-comms        2.1.0    
-PyYAML             6.0      
-requests           2.27.0   
-scipy              1.7.3    
-setuptools         41.6.0   
-six                1.16.0   
-toml               0.10.2   
-tornado            6.1      
-tqdm               4.62.3   
-typing-extensions  4.0.1    
-urllib3            1.26.7   
-webencodings       0.5.1    
-zipp               3.7.0    
+astropy
+attrs
+bokeh
+casatasks
+casatestutils
+casatools
+casaviewer
+certifi
+charset-normalizer
+cycler
+fonttools
+matplotlib
+numpy
+packaging
+panel
+param
+Pillow
+pip
+pluggy
+py
+pyct
+pyparsing
+pytest
+python-dateutil
+pytz
+pyviz-comms
+PyYAML
+requests
+scipy
+setuptools
+zipp
